--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,9 +29,9 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     environment:
-      - DATABASE_URL=postgresql://neondb_owner:npg_Gl3iHDhC8oar@ep-gentle-shadow-a1l92x53-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+      - DATABASE_URL=postgres db url
       - REDIS_URL=redis://redis:6379
-      - CEREBRAS_API_KEY=csk-j45pxjxj3y6wkmexnxmk5vd48ypdy4npd35t695hkvn6jrvf
+      - CEREBRAS_API_KEY=cerebras llm api key
       - SECRET_KEY=your-secret-key-change-in-production
       - DEBUG=True
       - HOST=0.0.0.0
